# internal/httpclient-next/model_device_grant_request.go
@@ -1,0 +1,269 @@
+/*
+ * Ory Hydra API
+ *
+ * Documentation for all of Ory Hydra's APIs.
+ *
+ * API version: 1.0.0
+ * Contact: hi@ory.sh
+ */
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package client
+
+import (
+	"encoding/json"
+	"time"
+)
+
+// DeviceGrantRequest struct for DeviceGrantRequest
+type DeviceGrantRequest struct {
+	// ID is the identifier (\"device challenge\") of the device grant request. It is used to identify the session.
+	Challenge string       `json:"challenge"`
+	Client    OAuth2Client `json:"client"`
+	HandledAt *time.Time   `json:"handled_at,omitempty"`
+	// RequestURL is the original Device Grant URL requested.
+	RequestUrl                   *string  `json:"request_url,omitempty"`
+	RequestedAccessTokenAudience []string `json:"requested_access_token_audience"`
+	RequestedScope               []string `json:"requested_scope"`
+}
+
+// NewDeviceGrantRequest instantiates a new DeviceGrantRequest object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewDeviceGrantRequest(challenge string, client OAuth2Client, requestedAccessTokenAudience []string, requestedScope []string) *DeviceGrantRequest {
+	this := DeviceGrantRequest{}
+	this.Challenge = challenge
+	this.Client = client
+	this.RequestedAccessTokenAudience = requestedAccessTokenAudience
+	this.RequestedScope = requestedScope
+	return &this
+}
+
+// NewDeviceGrantRequestWithDefaults instantiates a new DeviceGrantRequest object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewDeviceGrantRequestWithDefaults() *DeviceGrantRequest {
+	this := DeviceGrantRequest{}
+	return &this
+}
+
+// GetChallenge returns the Challenge field value
+func (o *DeviceGrantRequest) GetChallenge() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Challenge
+}
+
+// GetChallengeOk returns a tuple with the Challenge field value
+// and a boolean to check if the value has been set.
+func (o *DeviceGrantRequest) GetChallengeOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Challenge, true
+}
+
+// SetChallenge sets field value
+func (o *DeviceGrantRequest) SetChallenge(v string) {
+	o.Challenge = v
+}
+
+// GetClient returns the Client field value
+func (o *DeviceGrantRequest) GetClient() OAuth2Client {
+	if o == nil {
+		var ret OAuth2Client
+		return ret
+	}
+
+	return o.Client
+}
+
+// GetClientOk returns a tuple with the Client field value
+// and a boolean to check if the value has been set.
+func (o *DeviceGrantRequest) GetClientOk() (*OAuth2Client, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Client, true
+}
+
+// SetClient sets field value
+func (o *DeviceGrantRequest) SetClient(v OAuth2Client) {
+	o.Client = v
+}
+
+// GetHandledAt returns the HandledAt field value if set, zero value otherwise.
+func (o *DeviceGrantRequest) GetHandledAt() time.Time {
+	if o == nil || o.HandledAt == nil {
+		var ret time.Time
+		return ret
+	}
+	return *o.HandledAt
+}
+
+// GetHandledAtOk returns a tuple with the HandledAt field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *DeviceGrantRequest) GetHandledAtOk() (*time.Time, bool) {
+	if o == nil || o.HandledAt == nil {
+		return nil, false
+	}
+	return o.HandledAt, true
+}
+
+// HasHandledAt returns a boolean if a field has been set.
+func (o *DeviceGrantRequest) HasHandledAt() bool {
+	if o != nil && o.HandledAt != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetHandledAt gets a reference to the given time.Time and assigns it to the HandledAt field.
+func (o *DeviceGrantRequest) SetHandledAt(v time.Time) {
+	o.HandledAt = &v
+}
+
+// GetRequestUrl returns the RequestUrl field value if set, zero value otherwise.
+func (o *DeviceGrantRequest) GetRequestUrl() string {
+	if o == nil || o.RequestUrl == nil {
+		var ret string
+		return ret
+	}
+	return *o.RequestUrl
+}
+
+// GetRequestUrlOk returns a tuple with the RequestUrl field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *DeviceGrantRequest) GetRequestUrlOk() (*string, bool) {
+	if o == nil || o.RequestUrl == nil {
+		return nil, false
+	}
+	return o.RequestUrl, true
+}
+
+// HasRequestUrl returns a boolean if a field has been set.
+func (o *DeviceGrantRequest) HasRequestUrl() bool {
+	if o != nil && o.RequestUrl != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetRequestUrl gets a reference to the given string and assigns it to the RequestUrl field.
+func (o *DeviceGrantRequest) SetRequestUrl(v string) {
+	o.RequestUrl = &v
+}
+
+// GetRequestedAccessTokenAudience returns the RequestedAccessTokenAudience field value
+func (o *DeviceGrantRequest) GetRequestedAccessTokenAudience() []string {
+	if o == nil {
+		var ret []string
+		return ret
+	}
+
+	return o.RequestedAccessTokenAudience
+}
+
+// GetRequestedAccessTokenAudienceOk returns a tuple with the RequestedAccessTokenAudience field value
+// and a boolean to check if the value has been set.
+func (o *DeviceGrantRequest) GetRequestedAccessTokenAudienceOk() ([]string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.RequestedAccessTokenAudience, true
+}
+
+// SetRequestedAccessTokenAudience sets field value
+func (o *DeviceGrantRequest) SetRequestedAccessTokenAudience(v []string) {
+	o.RequestedAccessTokenAudience = v
+}
+
+// GetRequestedScope returns the RequestedScope field value
+func (o *DeviceGrantRequest) GetRequestedScope() []string {
+	if o == nil {
+		var ret []string
+		return ret
+	}
+
+	return o.RequestedScope
+}
+
+// GetRequestedScopeOk returns a tuple with the RequestedScope field value
+// and a boolean to check if the value has been set.
+func (o *DeviceGrantRequest) GetRequestedScopeOk() ([]string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.RequestedScope, true
+}
+
+// SetRequestedScope sets field value
+func (o *DeviceGrantRequest) SetRequestedScope(v []string) {
+	o.RequestedScope = v
+}
+
+func (o DeviceGrantRequest) MarshalJSON() ([]byte, error) {
+	toSerialize := map[string]interface{}{}
+	if true {
+		toSerialize["challenge"] = o.Challenge
+	}
+	if true {
+		toSerialize["client"] = o.Client
+	}
+	if o.HandledAt != nil {
+		toSerialize["handled_at"] = o.HandledAt
+	}
+	if o.RequestUrl != nil {
+		toSerialize["request_url"] = o.RequestUrl
+	}
+	if true {
+		toSerialize["requested_access_token_audience"] = o.RequestedAccessTokenAudience
+	}
+	if true {
+		toSerialize["requested_scope"] = o.RequestedScope
+	}
+	return json.Marshal(toSerialize)
+}
+
+type NullableDeviceGrantRequest struct {
+	value *DeviceGrantRequest
+	isSet bool
+}
+
+func (v NullableDeviceGrantRequest) Get() *DeviceGrantRequest {
+	return v.value
+}
+
+func (v *NullableDeviceGrantRequest) Set(val *DeviceGrantRequest) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableDeviceGrantRequest) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableDeviceGrantRequest) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableDeviceGrantRequest(val *DeviceGrantRequest) *NullableDeviceGrantRequest {
+	return &NullableDeviceGrantRequest{value: val, isSet: true}
+}
+
+func (v NullableDeviceGrantRequest) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableDeviceGrantRequest) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
