# internal/httpclient/models/device_grant_request.go
@@ -1,0 +1,243 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// DeviceGrantRequest Contains information on an ongoing device grant request.
+//
+// swagger:model deviceGrantRequest
+type DeviceGrantRequest struct {
+
+	// ID is the identifier ("device challenge") of the device grant request. It is used to
+	// identify the session.
+	// Required: true
+	Challenge *string `json:"challenge"`
+
+	// client
+	// Required: true
+	Client *OAuth2Client `json:"client"`
+
+	// handled at
+	// Format: date-time
+	HandledAt NullTime `json:"handled_at,omitempty"`
+
+	// RequestURL is the original Device Grant URL requested.
+	RequestURL string `json:"request_url,omitempty"`
+
+	// requested access token audience
+	// Required: true
+	RequestedAccessTokenAudience StringSlicePipeDelimiter `json:"requested_access_token_audience"`
+
+	// requested scope
+	// Required: true
+	RequestedScope StringSlicePipeDelimiter `json:"requested_scope"`
+}
+
+// Validate validates this device grant request
+func (m *DeviceGrantRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateChallenge(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateClient(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateHandledAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateRequestedAccessTokenAudience(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateRequestedScope(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *DeviceGrantRequest) validateChallenge(formats strfmt.Registry) error {
+
+	if err := validate.Required("challenge", "body", m.Challenge); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *DeviceGrantRequest) validateClient(formats strfmt.Registry) error {
+
+	if err := validate.Required("client", "body", m.Client); err != nil {
+		return err
+	}
+
+	if m.Client != nil {
+		if err := m.Client.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("client")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (m *DeviceGrantRequest) validateHandledAt(formats strfmt.Registry) error {
+	if swag.IsZero(m.HandledAt) { // not required
+		return nil
+	}
+
+	if err := m.HandledAt.Validate(formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("handled_at")
+		}
+		return err
+	}
+
+	return nil
+}
+
+func (m *DeviceGrantRequest) validateRequestedAccessTokenAudience(formats strfmt.Registry) error {
+
+	if err := validate.Required("requested_access_token_audience", "body", m.RequestedAccessTokenAudience); err != nil {
+		return err
+	}
+
+	if err := m.RequestedAccessTokenAudience.Validate(formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("requested_access_token_audience")
+		}
+		return err
+	}
+
+	return nil
+}
+
+func (m *DeviceGrantRequest) validateRequestedScope(formats strfmt.Registry) error {
+
+	if err := validate.Required("requested_scope", "body", m.RequestedScope); err != nil {
+		return err
+	}
+
+	if err := m.RequestedScope.Validate(formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("requested_scope")
+		}
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validate this device grant request based on the context it is used
+func (m *DeviceGrantRequest) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateClient(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.contextValidateHandledAt(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.contextValidateRequestedAccessTokenAudience(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.contextValidateRequestedScope(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *DeviceGrantRequest) contextValidateClient(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.Client != nil {
+		if err := m.Client.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("client")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (m *DeviceGrantRequest) contextValidateHandledAt(ctx context.Context, formats strfmt.Registry) error {
+
+	if err := m.HandledAt.ContextValidate(ctx, formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("handled_at")
+		}
+		return err
+	}
+
+	return nil
+}
+
+func (m *DeviceGrantRequest) contextValidateRequestedAccessTokenAudience(ctx context.Context, formats strfmt.Registry) error {
+
+	if err := m.RequestedAccessTokenAudience.ContextValidate(ctx, formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("requested_access_token_audience")
+		}
+		return err
+	}
+
+	return nil
+}
+
+func (m *DeviceGrantRequest) contextValidateRequestedScope(ctx context.Context, formats strfmt.Registry) error {
+
+	if err := m.RequestedScope.ContextValidate(ctx, formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("requested_scope")
+		}
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *DeviceGrantRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *DeviceGrantRequest) UnmarshalBinary(b []byte) error {
+	var res DeviceGrantRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
