# internal/httpclient/models/o_auth2_api_device_authorization_response.go
@@ -1,0 +1,79 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// OAuth2APIDeviceAuthorizationResponse OAuth2 Device Flow
+//
+// Ory's OAuth 2.0 Device Authorization API
+//
+// swagger:model oAuth2ApiDeviceAuthorizationResponse
+type OAuth2APIDeviceAuthorizationResponse struct {
+
+	// The device verification code.
+	// Example: ory_dc_smldfksmdfkl.mslkmlkmlk
+	DeviceCode string `json:"device_code,omitempty"`
+
+	// The lifetime in seconds of the "device_code" and "user_code".
+	// Example: 16830
+	ExpiresIn int64 `json:"expires_in,omitempty"`
+
+	// The minimum amount of time in seconds that the client
+	// SHOULD wait between polling requests to the token endpoint.  If no
+	// value is provided, clients MUST use 5 as the default.
+	// Example: 5
+	Interval int64 `json:"interval,omitempty"`
+
+	// The end-user verification code.
+	// Example: AAAAAA
+	UserCode string `json:"user_code,omitempty"`
+
+	// The end-user verification URI on the authorization
+	// server.  The URI should be short and easy to remember as end users
+	// will be asked to manually type it into their user agent.
+	// Example: https://auth.ory.sh/tv
+	VerificationURI string `json:"verification_uri,omitempty"`
+
+	// A verification URI that includes the "user_code" (or
+	// other information with the same function as the "user_code"),
+	// which is designed for non-textual transmission.
+	// Example: https://auth.ory.sh/tv?user_code=AAAAAA
+	VerificationURIComplete string `json:"verification_uri_complete,omitempty"`
+}
+
+// Validate validates this o auth2 Api device authorization response
+func (m *OAuth2APIDeviceAuthorizationResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this o auth2 Api device authorization response based on context it is used
+func (m *OAuth2APIDeviceAuthorizationResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *OAuth2APIDeviceAuthorizationResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *OAuth2APIDeviceAuthorizationResponse) UnmarshalBinary(b []byte) error {
+	var res OAuth2APIDeviceAuthorizationResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
