# spec/swagger.json
@@ -1072,6 +1072,61 @@
         }
       }
     },
+    "/oauth2/auth/requests/device/verify": {
+      "put": {
+        "description": "Verifies a device grant request",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http",
+          "https"
+        ],
+        "tags": [
+          "admin"
+        ],
+        "summary": "Verifies a device grant request",
+        "operationId": "adminVerifyUserCodeRequest",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "device_challenge",
+            "in": "query",
+            "required": true
+          },
+          {
+            "name": "Body",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/verifyUserCodeRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "completedRequest",
+            "schema": {
+              "$ref": "#/definitions/completedRequest"
+            }
+          },
+          "404": {
+            "description": "jsonError",
+            "schema": {
+              "$ref": "#/definitions/jsonError"
+            }
+          },
+          "500": {
+            "description": "jsonError",
+            "schema": {
+              "$ref": "#/definitions/jsonError"
+            }
+          }
+        }
+      }
+    },
     "/oauth2/auth/requests/login": {
       "get": {
         "description": "When an authorization code, hybrid, or implicit OAuth 2.0 Flow is initiated, ORY Hydra asks the login provider\n(sometimes called \"identity provider\") to authenticate the subject and then tell ORY Hydra now about it. The login\nprovider is an web-app you write and host, and it must be able to authenticate (\"show the subject a login screen\")\na subject (in OAuth2 the proper name for subject is \"resource owner\").\n\nThe authentication challenge is appended to the login provider URL to which the subject's user-agent (browser) is redirected to. The login\nprovider uses that challenge to fetch information on the OAuth2 request and then accept or reject the requested authentication process.",
@@ -1557,6 +1612,43 @@
             "$ref": "#/responses/emptyResponse"
           },
           "400": {
+            "description": "jsonError",
+            "schema": {
+              "$ref": "#/definitions/jsonError"
+            }
+          },
+          "500": {
+            "description": "jsonError",
+            "schema": {
+              "$ref": "#/definitions/jsonError"
+            }
+          }
+        }
+      }
+    },
+    "/oauth2/device/auth": {
+      "get": {
+        "description": "This endpoint is not documented here because you should never use your own implementation to perform OAuth2 flows.\nOAuth2 is a very popular protocol and a library for your programming language will exists.\n\nTo learn more about this flow please refer to the specification: https://tools.ietf.org/html/rfc8628",
+        "consumes": [
+          "application/x-www-form-urlencoded"
+        ],
+        "schemes": [
+          "http",
+          "https"
+        ],
+        "tags": [
+          "v0alpha2"
+        ],
+        "summary": "The OAuth 2.0 Device Authorize Endpoint",
+        "operationId": "performOAuth2DeviceFlow",
+        "responses": {
+          "200": {
+            "description": "oAuth2ApiDeviceAuthorizationResponse",
+            "schema": {
+              "$ref": "#/definitions/oAuth2ApiDeviceAuthorizationResponse"
+            }
+          },
+          "401": {
             "description": "jsonError",
             "schema": {
               "$ref": "#/definitions/jsonError"
@@ -2779,6 +2871,38 @@
         }
       }
     },
+    "deviceGrantRequest": {
+      "type": "object",
+      "title": "Contains information on an ongoing device grant request.",
+      "required": [
+        "challenge",
+        "requested_scope",
+        "requested_access_token_audience",
+        "client"
+      ],
+      "properties": {
+        "challenge": {
+          "description": "ID is the identifier (\"device challenge\") of the device grant request. It is used to\nidentify the session.",
+          "type": "string"
+        },
+        "client": {
+          "$ref": "#/definitions/oAuth2Client"
+        },
+        "handled_at": {
+          "$ref": "#/definitions/nullTime"
+        },
+        "request_url": {
+          "description": "RequestURL is the original Device Grant URL requested.",
+          "type": "string"
+        },
+        "requested_access_token_audience": {
+          "$ref": "#/definitions/StringSlicePipeDelimiter"
+        },
+        "requested_scope": {
+          "$ref": "#/definitions/StringSlicePipeDelimiter"
+        }
+      }
+    },
     "flushInactiveOAuth2TokensRequest": {
       "type": "object",
       "properties": {
@@ -3027,6 +3151,45 @@
           "items": {
             "type": "string"
           }
+        }
+      }
+    },
+    "oAuth2ApiDeviceAuthorizationResponse": {
+      "description": "Ory's OAuth 2.0 Device Authorization API",
+      "type": "object",
+      "title": "OAuth2 Device Flow",
+      "properties": {
+        "device_code": {
+          "description": "The device verification code.",
+          "type": "string",
+          "example": "ory_dc_smldfksmdfkl.mslkmlkmlk"
+        },
+        "expires_in": {
+          "description": "The lifetime in seconds of the \"device_code\" and \"user_code\".",
+          "type": "integer",
+          "format": "int64",
+          "example": 16830
+        },
+        "interval": {
+          "description": "The minimum amount of time in seconds that the client\nSHOULD wait between polling requests to the token endpoint.  If no\nvalue is provided, clients MUST use 5 as the default.",
+          "type": "integer",
+          "format": "int64",
+          "example": 5
+        },
+        "user_code": {
+          "description": "The end-user verification code.",
+          "type": "string",
+          "example": "AAAAAA"
+        },
+        "verification_uri": {
+          "description": "The end-user verification URI on the authorization\nserver.  The URI should be short and easy to remember as end users\nwill be asked to manually type it into their user agent.",
+          "type": "string",
+          "example": "https://auth.ory.sh/tv"
+        },
+        "verification_uri_complete": {
+          "description": "A verification URI that includes the \"user_code\" (or\nother information with the same function as the \"user_code\"),\nwhich is designed for non-textual transmission.",
+          "type": "string",
+          "example": "https://auth.ory.sh/tv?user_code=AAAAAA"
         }
       }
     },
@@ -3683,6 +3846,15 @@
         }
       }
     },
+    "verifyUserCodeRequest": {
+      "description": "Contains information on an device verification",
+      "type": "object",
+      "properties": {
+        "user_code": {
+          "type": "string"
+        }
+      }
+    },
     "version": {
       "type": "object",
       "properties": {
@@ -3736,6 +3908,10 @@
           "items": {
             "type": "string"
           }
+        },
+        "device_authorization_endpoint": {
+          "description": "URL of the authorization server's device authorization endpoint",
+          "type": "string"
         },
         "end_session_endpoint": {
           "description": "URL at the OP to which an RP can perform a redirect to request that the End-User be logged out at the OP.",
